# Rag-Assigment-Squad4

./: README.md  app.py  lab.ipynb  pyproject.toml
evaluation/: eval.py
implementation/: answer.py  ingest.ipynb  ingest.py
